8277928: Fix compilation on macosx-aarch64 after 8276108

Reviewed-by: shade, dholmes